refactor and optimize UploadPhotoService